# email-newsletter

./: Cargo.toml  app-config.yml  catalog-info.yaml
.cargo/: config.toml
.github/workflows/: test_format_lint_coverage.yml
src/: lib.rs  main.rs
tests/: health_check.rs
